# hostcall-cli

./: .gitignore  404.html  Cargo.toml  README.md  hello.html  home.html  imports.wit
src/: cli.rs  http_server.rs  load_module.rs  main.rs
wasm/module1/: Cargo.toml
wasm/module1/src/: main.rs
wasm/module_200/: Cargo.toml  Makefile
wasm/module_200/src/: main.rs
wasm/module_404/: Cargo.toml  Makefile
wasm/module_404/src/: main.rs
wasm/module_A/: Cargo.toml  Makefile
wasm/module_A/src/: main.rs
wasm/module_B/: Cargo.toml  Makefile
wasm/module_B/src/: main.rs
wasm/module_home/: Cargo.toml  Makefile
wasm/module_home/src/: main.rs
wasm/wits/: module1.wit
