[package]
    name    = "module_B"
    version = "0.1.0"
    edition = "2021"


[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
    serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
    serde = "1.0.70"

[workspace]
